Updated the upgrade window styles for readability. Added auto item merging. Fixed a SUPER annoying bug in the item pair finder which caused the auto merger to output duplicate level 1 items.

--- a/src/components/upgrade-window/upgrade-window.styles.scss
+++ b/src/components/upgrade-window/upgrade-window.styles.scss
@@ -48,7 +48,9 @@
 }
 
 .upgrade-window-items{
-    // display: flex;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
     // border: 1px solid green;
     position: relative;
     top: -100%;
